feat: add bazin method and tab navigation
This commit introduces the Bazin method for calculating the ceiling price of a stock, alongside the existing Graham formula.

Key changes:

- Added a tabbed interface in `index.html` to switch between the Graham formula and the Bazin method.
- Implemented the Bazin method UI, including input fields for "Dividend Yield Desejado" and "Média de Dividendo Pago".
- Created a `bazin.js` file (implementation in separate commit) to handle the Bazin method calculations.
- Updated `index.html` title and description to reflect the broader scope of stock price calculation.
- Added `tabs.js` to manage tab switching functionality.
- Updated manifest version to 4.

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Fórmula de Graham",
+  "name": "Cálculo de Preço de Ação",
   "version": "1.0.0",
-  "description": "Cálculo de Preço Justo",
-  "manifest_version": 3,
+  "description": "Cálculo de Preço de Ação",
+  "manifest_version": 4,
   "author": "ZweiDeveloper",
   "action": {
     "default_popup": "index.html",
-    "default_title": "Fórmula de Graham"
+    "default_title": "Cálculo de Preço de Ação"
   },
   "icons": {
     "128": "images/icon128.png"
